33% was too big for width of floats, float pushed down fixed

--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ h1 {
 
 .text {
 	float: left;
-	width: 33%;
+	width: 30%;
 	margin: 5px;
 }
 
 img.self {
 	float: left;
-	width: 33%;
+	width: 28%;
 	margin: 5px;
 }
 
